@@ -1,18 +1,18 @@
 /**
  * Copyright © 2023 Flioris
- *
+ * <p>
  * This file is part of Protogenchik.
- *
+ * <p>
  * Protogenchik is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- *
+ * <p>
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
- *
+ * <p>
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <https://www.gnu.org/licenses/>.
  */
@@ -20,79 +20,128 @@
 package flioris.util.reaction;
 
 import flioris.Bot;
-import flioris.util.Config;
+import flioris.util.ConfigHandler;
 import flioris.util.GuildSettings;
+import flioris.util.ProtectedGuildsCache;
 import flioris.util.message.BotMessage;
 import net.dv8tion.jda.api.EmbedBuilder;
+import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.audit.ActionType;
 import net.dv8tion.jda.api.audit.AuditLogEntry;
 import net.dv8tion.jda.api.entities.Guild;
+import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
+import net.dv8tion.jda.api.exceptions.ErrorHandler;
+import net.dv8tion.jda.api.requests.ErrorResponse;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.concurrent.TimeUnit;
 
 public class Reaction {
-    
+
     public static void to(Guild guild, User user, @Nullable ActionType actionType) {
-        GuildSettings guildSettings = Bot.getDb().getGuildSettings(guild.getIdLong());
+        GuildSettings guildSettings = ProtectedGuildsCache.get(guild.getId());
+        String lang = guildSettings.getLang();
 
         punish(guild, user, guildSettings.getReactionType());
 
-        if (user.isBot()) guild.retrieveAuditLogs().type(ActionType.BOT_ADD).queue(logs -> {
-            for (AuditLogEntry log : logs) if (log.getTargetId().equals(user.getId())) {
-                User adder = log.getUser();
-                if (guild.getOwnerIdLong() != user.getIdLong()) punish(guild, adder, guildSettings.getReactionType());
+        if (user.isBot() && guild.getSelfMember().hasPermission(Permission.VIEW_AUDIT_LOGS)) {
+            guild.retrieveAuditLogs().type(ActionType.BOT_ADD).queue(logs -> {
+                for (AuditLogEntry log : logs) {
+                    if (!log.getTargetId().equals(user.getId())) {
+                        continue;
+                    }
 
-                EmbedBuilder embedBuilder = Config.getMessageEmbed(guildSettings.getLang()+".embeds.addedNukeBot");
-                sendWarn(guild, guildSettings, embedBuilder
-                        .setDescription(embedBuilder.build().getDescription()
-                                .replace("{bot}", user.getAsMention())
-                                .replace("{user}", adder.getAsMention()))
-                        .build());
-                break;
-            }
-        });
+                    User adder = log.getUser();
 
-        if (actionType == null) return;
+                    if (adder == null) {
+                        return;
+                    }
 
-        EmbedBuilder embedBuilder = Config.getMessageEmbed(guildSettings.getLang()+".embeds.reaction");
-        sendWarn(guild, guildSettings, embedBuilder
-                .setDescription(embedBuilder.build().getDescription()
+                    EmbedBuilder warn = ConfigHandler.getMessageEmbed(lang + ".embeds.addedNukeBot");
+
+                    if (!guild.getOwnerId().equals(adder.getId())) {
+                        punish(guild, adder, guildSettings.getReactionType());
+                    }
+                    sendWarn(guild, guildSettings, warn
+                            .setDescription(warn.build().getDescription()
+                                    .replace("{bot}", user.getAsMention())
+                                    .replace("{user}", adder.getAsMention()))
+                            .build());
+
+                    return;
+                }
+            });
+        }
+
+        if (actionType == null) {
+            return;
+        }
+
+        EmbedBuilder warn = ConfigHandler.getMessageEmbed(lang + ".embeds.reaction");
+
+        sendWarn(guild, guildSettings, warn
+                .setDescription(warn.build().getDescription()
                         .replace("{action}", actionType.name())
                         .replace("{user}", user.getAsMention()))
                 .build());
     }
 
     private static void punish(Guild guild, User user, ReactionType reaction) {
+        Member selfMember = guild.getSelfMember();
+
         guild.retrieveMember(user).queue(member -> {
             switch (reaction) {
-                case KICK -> member.kick().queue(unused -> {}, error -> {});
-                case BAN -> member.ban(0, TimeUnit.SECONDS).queue(unused -> {}, error -> {});
+                case KICK -> {
+                    if (selfMember.canInteract(member)) {
+                        member.kick().queue();
+                    }
+                }
+                case BAN -> {
+                    if (selfMember.canInteract(member)) {
+                        member.ban(10, TimeUnit.MINUTES).queue();
+                    }
+                }
                 case REMOVE_ROLES -> member.getRoles().forEach(role -> {
-                    if (!role.getTags().isBot()) guild.removeRoleFromMember(member, role).queue(unused -> {}, error -> {});
+                    if (selfMember.canInteract(role)) {
+                        guild.removeRoleFromMember(member, role).queue();
+                    }
                 });
             }
-        }, error -> {});
+        }, new ErrorHandler().ignore(ErrorResponse.UNKNOWN_MEMBER));
     }
 
-    private static void sendWarn(Guild guild, GuildSettings guildSettings, MessageEmbed embed) {
-        TextChannel textChannel = Bot.getJda().getChannelById(TextChannel.class, guildSettings.getBotChannelId());
-        if (textChannel == null) {
-            guild.createTextChannel("antinuke").queue(channel -> {
-                Bot.getDb().updateGuild(guild.getIdLong(), "bot_channel_id", channel.getId());
-                EmbedBuilder embedBuilder = Config.getMessageEmbed(guildSettings.getLang()+".embeds.botChannelDeleted");
-                channel.sendMessageEmbeds(embedBuilder
-                                .setDescription(embedBuilder.build().getDescription()
+    private static void sendWarn(Guild guild, GuildSettings guildSettings, MessageEmbed warn) {
+        TextChannel channel = guild.getChannelById(TextChannel.class, guildSettings.getBotChannelId());
+        Member selfMember = guild.getSelfMember();
+
+        if (channel == null) {
+            if (!selfMember.hasPermission(Permission.MANAGE_CHANNEL, Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND,
+                    Permission.MESSAGE_EMBED_LINKS)) {
+                return;
+            }
+            guild.createTextChannel("antinuke").queue(restoredChannel -> {
+                EmbedBuilder notification = ConfigHandler.getMessageEmbed(guildSettings.getLang() + ".embeds.botChannelDeleted");
+                String restoredChannelId = restoredChannel.getId();
+                String guildId = guild.getId();
+                Bot.getCore().updateGuild(guildId, "bot_channel_id", restoredChannelId);
+                ProtectedGuildsCache.get(guildId).setBotChannelId(restoredChannelId);
+                restoredChannel.sendMessageEmbeds(notification
+                                .setDescription(notification.build().getDescription()
                                         .replace("{user}", "unknown"))
                                 .build())
-                        .queue(m -> new BotMessage(m.getIdLong(), m.getContentRaw(), m.getEmbeds().get(0)).cache());
-                channel.sendMessageEmbeds(embed)
-                        .queue(m -> new BotMessage(m.getIdLong(), m.getContentRaw(), m.getEmbeds().get(0)).cache());
+                        .queue(m -> new BotMessage(m.getId(), m.getContentRaw(), m.getEmbeds().getFirst()).cache());
+                restoredChannel.sendMessageEmbeds(warn)
+                        .queue(m -> new BotMessage(m.getId(), m.getContentRaw(), m.getEmbeds().getFirst()).cache());
             });
-        } else textChannel.sendMessageEmbeds(embed).queue(m ->
-                new BotMessage(m.getIdLong(), m.getContentRaw(), m.getEmbeds().get(0)).cache());
+        } else {
+            if (!selfMember.hasPermission(channel, Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND,
+                    Permission.MESSAGE_EMBED_LINKS)) {
+                return;
+            }
+            channel.sendMessageEmbeds(warn).queue(m -> new BotMessage(m.getId(), m.getContentRaw(), m.getEmbeds().getFirst()).cache());
+        }
     }
 }
